# browsy_cli

./: Cargo.toml  ReadMe.md
.github/workflows/: rust.yml
src/: cli.rs  content_source.rs  driver.rs  lib.rs  logger.rs  querys.rs  text_padding.rs  text_utills.rs
