[package]
name = "browsy_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
clap = { version = "3.2.8", features = ["derive"] }
colored = "2.0.0"
chrono = "0.4.19"

