[package]
name = "browsy_cli"
version = "0.1.5"
edition = "2021"
authors = ["Tomas Marques"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
browsy_lib = {path = "../browsy_lib"}
browsy_helpers = {path = "../browsy_helpers"}

colored = "2.0.0"
chrono = "0.4.19"
clap = { version = "3.2.8", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking"] }
base64 = "0.13.0"
terminal-menu = "2.0.4"

